DataGrid - Fix the expand button vertical alignment (T677928)

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -388,7 +388,7 @@
 
                 &.dx-@{widgetName}-group-space {
                     border-right: none;
-                    vertical-align: middle;
+                    vertical-align: top;
 
                     & + td {
                         border-left: none;
